--- a/tutorial/source/prior_predictive.ipynb
+++ b/tutorial/source/prior_predictive.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dff4ea150edb4e8497fba47c50117622",
+       "model_id": "0d7e23c109294aab9b685a03ad98f5a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b5bb4b1b6ac4bcaa88bda5bcbe91215",
+       "model_id": "0a7af7a74b1f45fc83d563b381d285fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,7 +216,7 @@
     "\n",
     "For more expensive simulations, sampling may be too slow to interactively generate samples at each change. As a computational trick we can draw many samples once from a diffuse distribution, then resample them from a modified distribution -- provided we importance sample or resample. Pyro provides an importance [Resampler](https://docs.pyro.ai/en/stable/infer.util.html#pyro.infer.resampler.Resampler) to aid in interactively visualizing expensive models.\n",
     "\n",
-    "We'll start with our original model and create a way to make parametrized ``guide``s with given priors. These guides are just the top half our our model, the top level parameters."
+    "We'll start with our original model and create a way to make parametrized partial models with given priors. These partial models are just the top half our our model, the top level parameters."
    ]
   },
   {
@@ -226,13 +226,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_guide(df0, df1, p0, p1, m0, m1):\n",
-    "    def guide():\n",
+    "def make_partial_model(df0, df1, p0, p1, m0, m1):\n",
+    "    def partial_model():\n",
     "        # Sample parameters from the prior.\n",
     "        pyro.sample(\"df\", dist.LogNormal(df0, df1))\n",
     "        pyro.sample(\"p_scale\", dist.LogNormal(p0, p1))  # process noise\n",
     "        pyro.sample(\"m_scale\", dist.LogNormal(m0, m1))  # measurement noise\n",
-    "    return guide"
+    "    return partial_model"
    ]
   },
   {
@@ -253,15 +253,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.14 s, sys: 109 ms, total: 1.24 s\n",
-      "Wall time: 639 ms\n"
+      "CPU times: user 1.14 s, sys: 112 ms, total: 1.26 s\n",
+      "Wall time: 636 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "diffuse_guide = make_guide(0, 10, 0, 10, 0, 10)\n",
-    "resampler = Resampler(model, diffuse_guide, num_samples=10000)"
+    "partial_guide = make_partial_model(0, 10, 0, 10, 0, 10)\n",
+    "resampler = Resampler(partial_guide, model, num_guide_samples=10000)"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "id": "785c131c",
    "metadata": {},
    "source": [
-    "The `Resampler.sample()` method takes a modified guide."
+    "The `Resampler.sample()` method takes a modified partial model."
    ]
   },
   {
@@ -280,8 +280,8 @@
    "outputs": [],
    "source": [
     "def plot_resampled(df0, df1, p0, p1, m0, m1):\n",
-    "    guide = make_guide(df0, df1, p0, p1, m0, m1)\n",
-    "    samples = resampler.sample(guide, num_samples=20)\n",
+    "    partial_model = make_partial_model(df0, df1, p0, p1, m0, m1)\n",
+    "    samples = resampler.sample(partial_model, num_samples=20)\n",
     "    trajectories = samples[\"obs\"]\n",
     "    plt.figure(figsize=(8, 5)).patch.set_color(\"white\")\n",
     "    plt.plot(trajectories.T)\n",
@@ -298,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a42cb13529a42f0b96dc7ee4e6bb2b3",
+       "model_id": "5a8e27ed1baa43f59d030c93f46f1485",
        "version_major": 2,
        "version_minor": 0
       },
