--- a/tutorial/source/prior_predictive.ipynb
+++ b/tutorial/source/prior_predictive.ipynb
@@ -23,6 +23,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0b4f8ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q pyro-ppl  # for colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "5184344d",
    "metadata": {},
    "outputs": [],
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e10c32bf",
    "metadata": {},
    "outputs": [],
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "03d29ed7",
    "metadata": {},
    "outputs": [],
@@ -92,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "18c11eb3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d7e23c109294aab9b685a03ad98f5a7",
+       "model_id": "e4799651fb314939944769478c5a26e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "776d52f5",
    "metadata": {},
    "outputs": [],
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2daa8449",
    "metadata": {},
    "outputs": [],
@@ -168,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "78a75ad1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a7af7a74b1f45fc83d563b381d285fa",
+       "model_id": "d4196d9ab1c74eae86d3bd3a38123f80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "41b808de",
    "metadata": {},
    "outputs": [],
@@ -245,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "74a685c8",
    "metadata": {},
    "outputs": [
@@ -253,8 +263,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.14 s, sys: 112 ms, total: 1.26 s\n",
-      "Wall time: 636 ms\n"
+      "CPU times: user 1.19 s, sys: 120 ms, total: 1.31 s\n",
+      "Wall time: 853 ms\n"
      ]
     }
    ],
@@ -274,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c939c991",
    "metadata": {},
    "outputs": [],
@@ -291,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0fe987b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a8e27ed1baa43f59d030c93f46f1485",
+       "model_id": "9836d1a9a3bc49be946fc8b90c9e07ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "112e9537",
    "metadata": {},
    "outputs": [],
@@ -374,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
