Address review comments

--- a/tutorial/source/prior_predictive.ipynb
+++ b/tutorial/source/prior_predictive.ipynb
@@ -97,7 +97,7 @@
    "id": "4b0348ce",
    "metadata": {},
    "source": [
-    "Now we can examine what model trajectories look like for particular values top level latent variables."
+    "Now we can examine what model trajectories look like for particular values of top level latent variables."
    ]
   },
   {
@@ -109,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4799651fb314939944769478c5a26e5",
+       "model_id": "ce0e5489600743b4b0c8c371ee95186c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,7 +135,7 @@
    "id": "8b71dd6e",
    "metadata": {},
    "source": [
-    "But to tune the parameters of our priors, we'd like to look at an ensmble of trajectories each of whose top-level parameters is sampled from the current prior.  Let's rewrite our model so we can input the prior parameters."
+    "But to tune the parameters of our priors, we'd like to look at an ensemble of trajectories each of whose top-level parameters is sampled from the current prior.  Let's rewrite our model so we can input the prior parameters."
    ]
   },
   {
@@ -185,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4196d9ab1c74eae86d3bd3a38123f80",
+       "model_id": "36f97b3bc75941ebb9a00556b948e0d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,8 +263,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.19 s, sys: 120 ms, total: 1.31 s\n",
-      "Wall time: 853 ms\n"
+      "CPU times: user 940 ms, sys: 146 ms, total: 1.09 s\n",
+      "Wall time: 934 ms\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9836d1a9a3bc49be946fc8b90c9e07ad",
+       "model_id": "3219e20ecdff4b6892b50894fc76be1b",
        "version_major": 2,
        "version_minor": 0
       },
