Minuscule changes as discussed

--- a/tutorial/source/custom_objectives_training.ipynb
+++ b/tutorial/source/custom_objectives_training.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Customizing objectives and training loops\n",
+    "# Customizing SVI objectives and training loops\n",
     "\n",
     "Pyro provides support for various optimization-based approaches to Bayesian inference, with `Trace_ELBO` serving as the basic implementation of SVI (stochastic variational inference).\n",
     "See the [docs](http://docs.pyro.ai/en/dev/inference_algos.html#module-pyro.infer.svi) for more information on the various SVI implementations and SVI \n",
@@ -67,7 +67,7 @@
     "\n",
     "```python\n",
     "loss_fn = lambda model, guide: pyro.infer.Trace_ELBO().differentiable_loss(model, guide, X_train, y_train)\n",
-    "with poutine.trace(param_only=True) as param_capture:\n",
+    "with pyro.poutine.trace(param_only=True) as param_capture:\n",
     "    loss = loss_fn(model, guide)\n",
     "params = set(site[\"value\"].unconstrained()\n",
     "                for site in param_capture.trace.nodes.values())\n",
