Update to newer seaborn.kdeplot args

--- a/tutorial/source/intro_long.ipynb
+++ b/tutorial/source/intro_long.ipynb
@@ -1835,12 +1835,12 @@
     "\n",
     "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(12, 6))\n",
     "fig.suptitle(\"Cross-sections of the Posterior Distribution\", fontsize=16)\n",
-    "sns.kdeplot(svi_samples[\"bA\"], y=svi_samples[\"bR\"], ax=axs[0], bw_adjust=4 )\n",
-    "sns.kdeplot(svi_mvn_samples[\"bA\"], y=svi_mvn_samples[\"bR\"], ax=axs[0], shade=True, bw_adjust=4)\n",
+    "sns.kdeplot(x=svi_samples[\"bA\"], y=svi_samples[\"bR\"], ax=axs[0], bw_adjust=4 )\n",
+    "sns.kdeplot(x=svi_mvn_samples[\"bA\"], y=svi_mvn_samples[\"bR\"], ax=axs[0], shade=True, bw_adjust=4)\n",
     "axs[0].set(xlabel=\"bA\", ylabel=\"bR\", xlim=(-2.8, -0.9), ylim=(-0.6, 0.2))\n",
     "\n",
-    "sns.kdeplot(svi_samples[\"bR\"], y=svi_samples[\"bAR\"], ax=axs[1],bw_adjust=4 )\n",
-    "sns.kdeplot(svi_mvn_samples[\"bR\"], y=svi_mvn_samples[\"bAR\"], ax=axs[1], shade=True, bw_adjust=4)\n",
+    "sns.kdeplot(x=svi_samples[\"bR\"], y=svi_samples[\"bAR\"], ax=axs[1],bw_adjust=4 )\n",
+    "sns.kdeplot(x=svi_mvn_samples[\"bR\"], y=svi_mvn_samples[\"bAR\"], ax=axs[1], shade=True, bw_adjust=4)\n",
     "axs[1].set(xlabel=\"bR\", ylabel=\"bAR\", xlim=(-0.55, 0.2), ylim=(-0.15, 0.85))\n",
     "\n",
     "\n",
