--- a/tutorial/source/model_rendering.ipynb
+++ b/tutorial/source/model_rendering.ipynb
@@ -13,17 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2f8f4e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "8a068eb0",
    "metadata": {},
    "outputs": [],
@@ -51,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "855a7d8f",
    "metadata": {},
    "outputs": [],
@@ -65,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e1e9628e",
    "metadata": {},
    "outputs": [
@@ -112,13 +101,13 @@
        "<text text-anchor=\"middle\" x=\"54\" y=\"-53.3\" font-family=\"Times,serif\" font-size=\"14.00\">obs</text>\n",
        "</g>\n",
        "<!-- m&#45;&gt;obs -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
        "<title>m&#45;&gt;obs</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M57.65,-182.91C59.68,-172.57 61.98,-159.09 63,-147 64.34,-131.06 64.34,-126.94 63,-111 62.28,-102.5 60.93,-93.31 59.49,-85.01\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"62.91,-84.29 57.65,-75.09 56.03,-85.56 62.91,-84.29\"/>\n",
        "</g>\n",
        "<!-- sd&#45;&gt;obs -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
        "<title>sd&#45;&gt;obs</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M33.4,-111.41C36.51,-103.34 40.33,-93.43 43.83,-84.35\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"47.13,-85.55 47.46,-74.96 40.6,-83.03 47.13,-85.55\"/>\n",
@@ -127,10 +116,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1054c8ee0>"
+       "<graphviz.graphs.Digraph at 0x1079687c0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "700a0917",
    "metadata": {},
    "outputs": [],
@@ -172,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "01a4b74b",
    "metadata": {},
    "outputs": [],
@@ -238,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "311896af",
    "metadata": {},
    "outputs": [
@@ -313,13 +302,13 @@
        "<text text-anchor=\"middle\" x=\"70\" y=\"-156.3\" font-family=\"Times,serif\" font-size=\"14.00\">c</text>\n",
        "</g>\n",
        "<!-- c&#45;&gt;y -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
        "<title>c&#45;&gt;y</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M84.57,-144.83C94.75,-134.94 108.52,-121.55 120.03,-110.36\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"122.47,-112.87 127.2,-103.38 117.59,-107.85 122.47,-112.87\"/>\n",
        "</g>\n",
        "<!-- s&#45;&gt;y -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
        "<title>s&#45;&gt;y</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M142,-141.7C142,-133.98 142,-124.71 142,-116.11\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"145.5,-116.1 142,-106.1 138.5,-116.1 145.5,-116.1\"/>\n",
@@ -328,10 +317,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x114aa1a60>"
+       "<graphviz.graphs.Digraph at 0x1079edb80>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8babebb4",
    "metadata": {},
    "outputs": [
@@ -433,10 +422,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x114a4b880>"
+       "<graphviz.sources.Source at 0x122e10e80>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "645df936",
    "metadata": {},
    "outputs": [],
@@ -480,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "66fc9f55",
    "metadata": {},
    "outputs": [
@@ -538,27 +527,27 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M33.64,-111.41C36.91,-103.22 40.94,-93.14 44.62,-83.95\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"47.95,-85.05 48.41,-74.47 41.45,-82.45 47.95,-85.05\"/>\n",
        "</g>\n",
-       "<!-- mu -->\n",
+       "<!-- sigma -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>mu</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"41.5,-270 22.5,-270 22.5,-255 41.5,-255 41.5,-270\"/>\n",
-       "<text text-anchor=\"middle\" x=\"32\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\">mu</text>\n",
+       "<title>sigma</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"49,-270 15,-270 15,-255 49,-255 49,-270\"/>\n",
+       "<text text-anchor=\"middle\" x=\"32\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\">sigma</text>\n",
        "</g>\n",
-       "<!-- mu&#45;&gt;x -->\n",
+       "<!-- sigma&#45;&gt;x -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>mu&#45;&gt;x</title>\n",
+       "<title>sigma&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M34.52,-254.67C36.94,-248.13 40.76,-237.82 44.37,-228.05\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"47.67,-229.22 47.85,-218.63 41.1,-226.79 47.67,-229.22\"/>\n",
        "</g>\n",
-       "<!-- sigma -->\n",
+       "<!-- mu -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>sigma</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"94,-270 60,-270 60,-255 94,-255 94,-270\"/>\n",
-       "<text text-anchor=\"middle\" x=\"77\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\">sigma</text>\n",
+       "<title>mu</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"86.5,-270 67.5,-270 67.5,-255 86.5,-255 86.5,-270\"/>\n",
+       "<text text-anchor=\"middle\" x=\"77\" y=\"-258.8\" font-family=\"Times,serif\" font-size=\"14.00\">mu</text>\n",
        "</g>\n",
-       "<!-- sigma&#45;&gt;x -->\n",
+       "<!-- mu&#45;&gt;x -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>sigma&#45;&gt;x</title>\n",
+       "<title>mu&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M74.36,-254.67C71.83,-248.13 67.85,-237.82 64.07,-228.05\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"67.3,-226.69 60.43,-218.63 60.77,-229.22 67.3,-226.69\"/>\n",
        "</g>\n",
@@ -566,10 +555,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x114aa1bb0>"
+       "<graphviz.graphs.Digraph at 0x122e10df0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8130359c",
    "metadata": {},
    "outputs": [
@@ -604,10 +593,10 @@
        "<!-- Generated by graphviz version 3.0.0 (20220226.1711)\n",
        " -->\n",
        "<!-- Pages: 1 -->\n",
-       "<svg width=\"356pt\" height=\"346pt\"\n",
-       " viewBox=\"0.00 0.00 355.50 346.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<svg width=\"348pt\" height=\"346pt\"\n",
+       " viewBox=\"0.00 0.00 347.50 346.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 342)\">\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-342 351.5,-342 351.5,4 -4,4\"/>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-342 343.5,-342 343.5,4 -4,4\"/>\n",
        "<g id=\"clust1\" class=\"cluster\">\n",
        "<title>cluster_N</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"20,-8 20,-83 90,-83 90,-8 20,-8\"/>\n",
@@ -649,47 +638,47 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M33.64,-111.41C36.91,-103.22 40.94,-93.14 44.62,-83.95\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"47.95,-85.05 48.41,-74.47 41.45,-82.45 47.95,-85.05\"/>\n",
        "</g>\n",
-       "<!-- mu -->\n",
+       "<!-- sigma -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>mu</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"41.5,-304 22.5,-304 22.5,-289 41.5,-289 41.5,-304\"/>\n",
-       "<text text-anchor=\"middle\" x=\"32\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\">mu</text>\n",
+       "<title>sigma</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"49,-304 15,-304 15,-289 49,-289 49,-304\"/>\n",
+       "<text text-anchor=\"middle\" x=\"32\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\">sigma</text>\n",
        "</g>\n",
-       "<!-- mu&#45;&gt;x -->\n",
+       "<!-- sigma&#45;&gt;x -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>mu&#45;&gt;x</title>\n",
+       "<title>sigma&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M33.58,-288.78C36.5,-276.38 42.87,-249.32 47.72,-228.69\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"51.14,-229.42 50.03,-218.88 44.33,-227.81 51.14,-229.42\"/>\n",
        "</g>\n",
-       "<!-- sigma -->\n",
+       "<!-- mu -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>sigma</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"94,-304 60,-304 60,-289 94,-289 94,-304\"/>\n",
-       "<text text-anchor=\"middle\" x=\"77\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\">sigma</text>\n",
+       "<title>mu</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"86.5,-304 67.5,-304 67.5,-289 86.5,-289 86.5,-304\"/>\n",
+       "<text text-anchor=\"middle\" x=\"77\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\">mu</text>\n",
        "</g>\n",
-       "<!-- sigma&#45;&gt;x -->\n",
+       "<!-- mu&#45;&gt;x -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>sigma&#45;&gt;x</title>\n",
+       "<title>mu&#45;&gt;x</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M75.35,-288.78C72.3,-276.38 65.64,-249.32 60.56,-228.69\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"63.94,-227.76 58.15,-218.88 57.14,-229.43 63.94,-227.76\"/>\n",
        "</g>\n",
        "<!-- distribution_description_node -->\n",
        "<g id=\"node6\" class=\"node\">\n",
        "<title>distribution_description_node</title>\n",
-       "<text text-anchor=\"start\" x=\"120.5\" y=\"-322.8\" font-family=\"Times,serif\" font-size=\"14.00\">x ~ Normal</text>\n",
-       "<text text-anchor=\"start\" x=\"120.5\" y=\"-307.8\" font-family=\"Times,serif\" font-size=\"14.00\">y ~ LogNormal</text>\n",
-       "<text text-anchor=\"start\" x=\"120.5\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\">z ~ Normal</text>\n",
-       "<text text-anchor=\"start\" x=\"120.5\" y=\"-277.8\" font-family=\"Times,serif\" font-size=\"14.00\">sigma : GreaterThan(lower_bound=0.0)</text>\n",
-       "<text text-anchor=\"start\" x=\"120.5\" y=\"-262.8\" font-family=\"Times,serif\" font-size=\"14.00\">mu : Real()</text>\n",
+       "<text text-anchor=\"start\" x=\"112.5\" y=\"-322.8\" font-family=\"Times,serif\" font-size=\"14.00\">x ~ Normal</text>\n",
+       "<text text-anchor=\"start\" x=\"112.5\" y=\"-307.8\" font-family=\"Times,serif\" font-size=\"14.00\">y ~ LogNormal</text>\n",
+       "<text text-anchor=\"start\" x=\"112.5\" y=\"-292.8\" font-family=\"Times,serif\" font-size=\"14.00\">z ~ Normal</text>\n",
+       "<text text-anchor=\"start\" x=\"112.5\" y=\"-277.8\" font-family=\"Times,serif\" font-size=\"14.00\">sigma : GreaterThan(lower_bound=0.0)</text>\n",
+       "<text text-anchor=\"start\" x=\"112.5\" y=\"-262.8\" font-family=\"Times,serif\" font-size=\"14.00\">mu : Real()</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x114a4bfd0>"
+       "<graphviz.graphs.Digraph at 0x122e6c8e0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9f1a4ebf",
    "metadata": {},
    "outputs": [],
@@ -737,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "8514d7df",
    "metadata": {},
    "outputs": [
@@ -803,10 +792,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x114aabf40>"
+       "<graphviz.graphs.Digraph at 0x122e6ce80>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "da332f10",
    "metadata": {},
    "outputs": [],
@@ -841,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "20b69fb9",
    "metadata": {
     "scrolled": true
@@ -905,10 +894,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x114a4beb0>"
+       "<graphviz.graphs.Digraph at 0x122e460a0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
