--- a/tutorial/source/gp.ipynb
+++ b/tutorial/source/gp.ipynb
@@ -70,7 +70,8 @@
     "\n",
     "smoke_test = \"CI\" in os.environ  # ignore; used to check code integrity in the Pyro repo\n",
     "assert pyro.__version__.startswith('1.8.4')\n",
-    "pyro.set_rng_seed(0)"
+    "pyro.set_rng_seed(0)",
+    "torch.set_default_tensor_type(torch.DoubleTensor)"
    ]
   },
   {
