Update torch_patch.py (#3174)
* Update torch_patch.py

Removed the PositiveDefinite() function for the one from PyTorch to be used instead, as is what less precise resulting in errors for certain cases.

* Update test_linear_models_eig.py

Passed scale_tril to dist.MultivariateNormal as keyword argument instead of positional argument as it otherwise gets identified as being a covariance matrix.

* Update gp.ipynb

* Update gp.ipynb

* Changed float precision to 64 in cell 27

--- a/tutorial/source/gp.ipynb
+++ b/tutorial/source/gp.ipynb
@@ -70,7 +70,8 @@
     "\n",
     "smoke_test = \"CI\" in os.environ  # ignore; used to check code integrity in the Pyro repo\n",
     "assert pyro.__version__.startswith('1.8.4')\n",
-    "pyro.set_rng_seed(0)"
+    "pyro.set_rng_seed(0)\n",
+    "torch.set_default_tensor_type(torch.DoubleTensor)"
    ]
   },
   {
@@ -1054,7 +1055,7 @@
    "source": [
     "# only take petal length and petal width\n",
     "X = torch.from_numpy(\n",
-    "    df[df.columns[2:4]].values.astype(\"float32\"),\n",
+    "    df[df.columns[2:4]].values.astype(\"float64\"),\n",
     ")\n",
     "df[\"species\"] = df[\"species\"].astype(\"category\")\n",
     "# encode the species as 0, 1, 2\n",
